[package]
name = "mcp-devx"
version = "0.1.0"
edition = "2024"

[dependencies]
#rmcp= { version = "0.1", features = 
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main",features = ["server", "transport-sse-server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9" }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
pdf-extract = "0.9.0"

